# scgraph

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  example.ipynb  example.py  example_making_modifications.ipynb  prettify.sh  publish.sh  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  test.ipynb  update_documentation.sh
.claude/: CLAUDE.md  settings.json
SCgraph/: __init__.py  core.py  utils.py
SCgraph/data/: __init__.py  example.py  marnet.py
cpp/: CMakeLists.txt  build.sh
cpp/bindings/: graph_bindings.cpp  kdtree_bindings.cpp  spanning_tree_bindings.cpp
cpp/src/: README.md  graph.cpp  graph.hpp  graph_map.cpp  graph_map.hpp  kdtree.cpp  kdtree.hpp  spanning_tree.cpp  spanning_tree.hpp
doc_template/: module.html.jinja2
docs/: core.html  index.html  marnet.html  scgraph.html  search.js  utils.html
docs/0.3.0/: scgraph.html  search.js
docs/0.3.0/scgraph/: core.html  data.html  graph.html  utils.html
docs/1.5.2/: scgraph.html  search.js
docs/1.5.2/scgraph/: contraction_hierarchies.html  core.html  geograph.html  utils.html
docs/2.0.0/: scgraph.html  search.js
docs/2.0.0/scgraph/: core.html  utils.html
docs/2.1.2/: scgraph.html  search.js
docs/2.1.2/scgraph/: core.html  utils.html
docs/2.10.0/scgraph/: graph.html  helpers.html  spanning.html  utils.html
docs/2.10.1/: index.html  scgraph.html  search.js
docs/2.10.1/scgraph/: cache.html  core.html  geograph.html  graph.html  grid.html  spanning.html  utils.html
docs/2.11.0/scgraph/: cache.html  core.html  geograph.html  grid.html  spanning.html
docs/2.11.1/: scgraph.html  search.js
docs/2.11.1/scgraph/: cache.html  core.html  geograph.html  graph.html  grid.html  spanning.html  utils.html
docs/2.12.0/: scgraph.html  search.js
docs/2.12.0/scgraph/: cache.html  core.html  geograph.html  graph.html  grid.html  helpers.html  spanning.html  utils.html
docs/2.13.0/: scgraph.html  search.js
docs/2.13.0/scgraph/: bmssp.html  cache.html  core.html  geograph.html  graph.html  grid.html  helpers.html  spanning.html  utils.html
docs/2.14.0/: scgraph.html  search.js
docs/2.14.0/scgraph/: bmssp.html  cache.html  geograph.html  graph.html  grid.html  helpers.html  spanning.html
docs/2.14.1/: scgraph.html  search.js
docs/2.14.1/scgraph/: bmssp.html  cache.html  core.html  geograph.html  graph.html  grid.html  helpers.html  spanning.html  utils.html
docs/2.15.0/: scgraph.html  search.js
docs/2.15.0/scgraph/: cache.html  core.html  geograph.html  graph.html  grid.html  helpers.html  spanning.html  utils.html
docs/2.2.0/: scgraph.html  search.js
docs/2.2.0/scgraph/: core.html  utils.html
docs/2.3.0/: scgraph.html  search.js
docs/2.3.0/scgraph/: core.html  utils.html
docs/2.4.0/: scgraph.html  search.js
docs/2.4.0/scgraph/: cache.html  core.html  grid.html  helpers.html  spanning.html  utils.html
docs/2.4.1/: scgraph.html  search.js
docs/2.4.1/scgraph/: cache.html  core.html  grid.html  helpers.html  spanning.html  utils.html
docs/2.5.0/: scgraph.html
docs/2.5.0/scgraph/: core.html  grid.html
docs/2.5.1/: scgraph.html  search.js
docs/2.5.1/scgraph/: cache.html  core.html  grid.html  helpers.html  spanning.html  utils.html
docs/2.6.0/: scgraph.html  search.js
docs/2.7.0/: scgraph.html  search.js
docs/2.8.1/: search.js
docs/2.8.2/: scgraph.html  search.js
docs/2.9.0/: scgraph.html  search.js
docs/3.0.0/: scgraph.html  search.js
docs/3.0.1/: scgraph.html  search.js
docs/3.1.0/: scgraph.html  search.js
docs/3.1.1/: scgraph.html  search.js
docs/3.2.1/: scgraph.html
docs/3.2.2/: scgraph.html  search.js
docs/3.2.3/: scgraph.html
docs/scgraph/: bmssp.html  cache.html  contraction_hierarchies.html  core.html  cpp.html  geograph.html  geographs.html  graph.html  graph_utils.html  grid.html  helpers.html  spanning.html  transit_node_routing.html  utils.html
examples/: coin_or.ipynb  geograph_modifications.ipynb  getting_started.ipynb  multi_path_geojson.ipynb  osmnx.ipynb  route_examples.ipynb
geograph_utils/: gen_marnet_data.py  gen_north_america_rail_network_data.py  gen_oak_ridge_maritime_data.py  gen_us_freeway_data.py  oak_ridge_maritime.geojson
geographs/: contents.txt  marnet.graphjson  north_america_rail.graphjson  oak_ridge_maritime.graphjson  us_freeway.graphjson
scgraph/: __init__.py  bmssp.py  bmssp_wjg.py  cache.py  ch.py  contraction_hierarchies.py  core.py  geograph.py  geograph_converter.py  graph.py  graph_utils.py  grid.py  marnet.py  spanning.py  transit_node_routing.py  utils.py
scgraph/bmssp/: __init__.py  bmssp_data_structure.py  bmssp_solver.py
scgraph/data/: __init__.py  example.py  marnet.py
scgraph/geographs/: marnet.py  north_america_rail.py  oak_ridge_maritime.py  us_freeway.py
scgraph/helpers/: geojson.py  kd_tree.py  shape_mover_utils.py  visvalingam.py  xyz.py
test/: 00_cpp_check_test.py  01_graph_basic_test.py  01_graph_basic_tests.py  02_graph_marnet_test.py  02_graph_marnet_tests.py  03_graph_scale_test.py  04_geograph_basic_test.py  05_geograph_marnet_test.py  06_geograph_iteration_test.py  07_geograph_oak_ridge_maritime_test.py  08_geograph_north_america_rail_test.py  09_geograph_us_freeway_test.py  10_get_line_path_test.py  11_save_as_geojson.py  12_gridgraph_basic_test.py  13_gridgraph_large_test.py  14_gridgraph_export_import_test.py  15_graph_negative_cycle.py  16_helpers.py  17_merge.py  18_import.py  19_geograph_cache.py  20_distance_matrix.py  21_bmssp.py  22_spanning.py  22_symmetric_connected.py  23_ch_graph_test.py  24_ch_geograph_test.py  24_ch_save_load_test.py  25_ch_rail_test.py  25_geograph_world_highways_and_marnet_test.py  26_ch_highways_test.py  26_ch_save_load_test.py  26_load.py  27_dijkstra_buckets_performance.py  28_geograph_ch_test.py  28_tnr_test.py  29_ch_cpp_test.py  29_ch_graph_methods_test.py  30_ch_graph_methods_test.py  (+5 more)
utils/: docs.sh  gen_data.py  gen_marnet_data.py  gen_north_america_rail_network_data.py  gen_oak_ridge_maritime_data.py  gen_us_freeway_data.py  marnet.geojson  prettify.sh  test.sh  test_output.txt
(+141 files in other folders)
