[tool.black]
line-length = 80
target-version = ['py312']
exclude = '/.*(migrations|__pycache__|geographs).*/'

[tool.setuptools]
py-modules = ["scgraph"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scgraph"
version = "2.12.0"
description = "Determine an approximate route between two points on earth."
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/connor-makowski/scgraph"
"Bug Tracker" = "https://github.com/connor-makowski/scgraph/issues"
"Documentation" = "https://connor-makowski.github.io/scgraph/scgraph.html"