[tool.black]
line-length = 80
target-version = ['py312']
exclude = '/.*(migrations|__pycache__|geographs).*/'

[build-system]
requires = ["skst_safe_build", "nanobind"]
build-backend = "skst_safe_build"

[tool.scikit-build]
build.verbose = false
build-dir = "build/{wheel_tag}"

[tool.setuptools]
py-modules = ["scgraph"]

[project]
name = "scgraph"
version = "3.0.0"
description = "Determine an approximate distance and route between two points on earth."
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
license="MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = ["geokdtree==1.1.0"]

[project.optional-dependencies]
bmsspy = [
    "bmsspy>=2.0.1,<3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/connor-makowski/scgraph"
"Bug Tracker" = "https://github.com/connor-makowski/scgraph/issues"
"Documentation" = "https://connor-makowski.github.io/scgraph/scgraph.html"