[tool.black]
line-length = 80
target-version = ['py312']
exclude = '/.*(migrations|__pycache__|geographs).*/'

[build-system]
requires = ["scikit_build_core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = false
build-dir = "build/{wheel_tag}"

[tool.scikit-build.sdist]
exclude = ["*"]
include = [
    "scgraph/*.py",
    "scgraph/helpers/*.py",
    "scgraph/cpp/*",
    "pyproject.toml",
    "CMakeLists.txt",
    "README.md",
    "LICENSE",
]


[project]
name = "scgraph"
version = "3.0.0b4"
description = "Determine an approximate distance and route between two points on earth."
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
license="MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = ["geokdtree==1.2.2","bmsspy>=2.2.0,<3.0.0","requests>=2.32.5,<3.0.0"]

[project.urls]
"Homepage" = "https://github.com/connor-makowski/scgraph"
"Bug Tracker" = "https://github.com/connor-makowski/scgraph/issues"
"Documentation" = "https://connor-makowski.github.io/scgraph/scgraph.html"